...
                    temperatureSelect
                        .modifier(CustomBackgroundModifier())
                }
                
                Section(header: Text("Additional Information")) {
                    NavigationLink(destination: SkinTypeInfo()) {
                        Text("📘 Skin Types")
                    }
                    .modifier(CustomBackgroundModifier())
                
                    NavigationLink(destination: UVIndexInfo()) {
                        Text("☀️ UV Index")
                    
                    }
                    .modifier(CustomBackgroundModifier())
                }
                
                Section {
...
