...
    // Displays the UV index information page
    var body: some View {
        NavigationView {
            GroupBox {
                ScrollView() {
                    VStack {
                        buildUVTab(colour: .blue, range: "0-2", content: "Low danger from the sun's UV rays for the average person.", title: "Low")
                        Divider()
                        buildUVTab(colour: .yellow, range: "3-5", content: "Moderate risk of harm from unprotected sun exposure.", title: "Moderate")
                        Divider()
                        buildUVTab(colour: .orange, range: "6-7", content: "High risk of harm from unprotected sun exposure. Protection against skin and eye damage is needed.", title: "High")
                        Divider()
                        buildUVTab(colour: .red, range: "8-10", content: "Very high risk of harm from unprotected sun exposure. Take extra precautions because unrpotected skin and eyes will be damaged and can burn quickly.", title: "Very High")
...
